zinc-flow-java: virtual threads for ingress + provider daemons
Jetty's QueuedThreadPool now dispatches handler work onto a virtual-
thread executor, so blocking I/O inside a processor (HTTP, disk, DB)
no longer ties up an OS thread. Lets one worker pod fan out to
thousands of concurrent ingests instead of being capped at ~200.
K8s scales pods out, Loom scales within.

Same pivot applied to provider daemons that previously created
platform threads: UIRegistrationProvider heartbeat tick, the
ContentStoreCleanup sweep body, and VersionControlProvider's git
stdout/stderr drains. Schedulers themselves stay platform (STPE's
timing relies on park/unpark) — only the per-tick work moves.

Also tightened two fields to volatile (HttpServer.boundPort and
currentPlugins) since they're read/written from multiple handler
threads.

VirtualThreadIngestTest fires 200 concurrent POST / ingests against
a processor that sleeps 100ms each and asserts the wall time stays
under 10s — a serialised pool would need 20s. 284 tests green.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>